--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: transfer-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/banking_ledger
+    url: jdbc:postgresql://postgres:5432/banking_ledger
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
@@ -15,12 +15,12 @@ spring:
         format_sql: true
     show-sql: false
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: kafka:9092
       group-id: transfer-service-group
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -38,7 +38,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
   instance:
     preferIpAddress: true
     instance-id: ${spring.application.name}:${random.value}
